// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserReducer should handle all defined error types: rejected types DELETE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "DELETE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types GET_BILLING_ACCOUNTS_RHSM 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "GET_BILLING_ACCOUNTS_RHSM_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types GET_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types PLATFORM_USER_AUTH 1`] = `
{
  "result": {
    "auth": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "PLATFORM_USER_AUTH_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types SET_PLATFORM_EXPORT_EXISTING_STATUS 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "locale": {},
    "optin": {},
  },
  "type": "SET_PLATFORM_EXPORT_EXISTING_STATUS_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types UPDATE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "UPDATE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types USER_LOCALE 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "optin": {},
  },
  "type": "USER_LOCALE_REJECTED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types DELETE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "DELETE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types GET_BILLING_ACCOUNTS_RHSM 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "GET_BILLING_ACCOUNTS_RHSM_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types GET_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types PLATFORM_USER_AUTH 1`] = `
{
  "result": {
    "auth": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "PLATFORM_USER_AUTH_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types SET_PLATFORM_EXPORT_EXISTING_STATUS 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "locale": {},
    "optin": {},
  },
  "type": "SET_PLATFORM_EXPORT_EXISTING_STATUS_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types UPDATE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "UPDATE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_LOCALE 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "optin": {},
  },
  "type": "USER_LOCALE_FULFILLED",
}
`;

exports[`UserReducer should handle all defined pending types: pending types DELETE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "DELETE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types GET_BILLING_ACCOUNTS_RHSM 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "GET_BILLING_ACCOUNTS_RHSM_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types GET_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "GET_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types PLATFORM_USER_AUTH 1`] = `
{
  "result": {
    "auth": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "PLATFORM_USER_AUTH_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types SET_PLATFORM_EXPORT_EXISTING_STATUS 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "locale": {},
    "optin": {},
  },
  "type": "SET_PLATFORM_EXPORT_EXISTING_STATUS_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types UPDATE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "UPDATE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types USER_LOCALE 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "optin": {},
  },
  "type": "USER_LOCALE_PENDING",
}
`;

exports[`UserReducer should handle specific defined types: defined type SET_CONFIG_RHSM_RESET 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "SET_CONFIG_RHSM_RESET",
}
`;

exports[`UserReducer should handle specific defined types: defined type SET_PLATFORM_EXPORT_RESET 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "SET_PLATFORM_EXPORT_RESET",
}
`;

exports[`UserReducer should handle specific defined types: defined type SET_PLATFORM_EXPORT_STATUS 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {
      "test_id": {
        "id": "test_id",
        "isPending": true,
        "pending": [],
        "type": "SET_PLATFORM_EXPORT_STATUS",
      },
    },
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "SET_PLATFORM_EXPORT_STATUS",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 400 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {},
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 401 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {
      "data": [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 401",
      "status": 401,
    },
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 403 1`] = `
{
  "result": {
    "auth": {},
    "billingAccounts": {},
    "errors": {
      "data": [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 403",
      "status": 403,
    },
    "exports": {},
    "exportsExisting": {},
    "locale": {},
    "optin": {},
  },
  "type": "4XX",
}
`;
